apps/productivity/planka/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: planka-app
  namespace: productivity
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Planka
    gethomepage.dev/description: Kanban board
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: planka.png
    gethomepage.dev/href: https://planka.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`planka.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: planka-app
          port: 1337
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
